traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:3: error: not found: value GetY
    while (getMondeLargeur()-1!=getX() && getMondeHauteur!= GetY()){
                                                            ^